--- a/index.html
+++ b/index.html
@@ -194,28 +194,65 @@ h2{
   box-shadow:0 10px 30px var(--shadow);
 }
 
-/* JOURNEY - TIMELINE */
-.timeline-journey{
-  max-width:900px;
-  margin:40px auto 0;
-  border-left:3px solid var(--timeline-accent);
-  padding-left:40px;
-  position:relative;
+/* PROFESSIONAL JOURNEY - NEW GRID WITH HOVER EXPAND */
+.journey-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+  margin-top: 40px;
 }
-.timeline-item{
-  margin-bottom:40px;
-  position:relative;
+.journey-card {
+  background: var(--card-bg);
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 5px 15px var(--shadow);
+  transition: all 0.4s ease;
+  cursor: pointer;
+  height: 220px; /* Fixed height when collapsed */
+  position: relative;
 }
-.timeline-item::before{
-  content:"";
-  position:absolute;
-  left:-46px;
-  top:8px;
-  width:16px;
-  height:16px;
-  background:var(--accent);
-  border-radius:50%;
-  box-shadow:0 0 0 4px rgba(0,188,212,.2);
+.journey-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 20px 40px rgba(0,188,212,.3);
+  height: auto; /* Expand on hover */
+  z-index: 5;
+}
+.journey-card img {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+  background: #1a1f28;
+  padding: 20px;
+}
+.journey-card .content {
+  padding: 20px;
+  text-align: center;
+}
+.journey-card h3 {
+  color: var(--accent);
+  margin-bottom: 8px;
+}
+.journey-card .year-title {
+  font-size: 14px;
+  opacity: 0.8;
+  margin-bottom: 15px;
+}
+.journey-card .details {
+  font-size: 15px;
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.4s ease;
+  text-align: left;
+}
+.journey-card:hover .details {
+  opacity: 1;
+  max-height: 300px; /* Enough for content */
+  padding-top: 15px;
+}
+.journey-card .details ul {
+  list-style: disc inside;
+  margin-left: 10px;
 }
 
 /* SLIDER BASE */
@@ -391,6 +428,9 @@ footer a{
     height:40px;
     font-size:24px;
   }
+  .journey-grid {
+    grid-template-columns: 1fr;
+  }
 }
 @media(max-width:600px){
   .hero-text h1{font-size:36px}
@@ -445,13 +485,60 @@ footer a{
   </div>
 </section>
 
-<!-- JOURNEY -->
+<!-- JOURNEY - NEW GRID VERSION -->
 <section id="journey" class="fade">
   <h2>Professional Journey</h2>
-  <div class="timeline-journey">
-    <div class="timeline-item"><h3>Foundations</h3><p>Hands-on IT support and troubleshooting in dynamic environments.</p></div>
-    <div class="timeline-item"><h3>Enterprise Growth</h3><p>Supporting NGO and logistics infrastructure at scale.</p></div>
-    <div class="timeline-item"><h3>Systems & Security</h3><p>Advanced infrastructure, networking, and cybersecurity implementations.</p></div>
+  <div class="journey-grid">
+    <!-- Card 1 -->
+    <div class="journey-card">
+      <img src="company1.png" alt="Company 1 Logo">
+      <div class="content">
+        <h3>Company Name 1</h3>
+        <p class="year-title">2020 - 2022 | IT Support Specialist</p>
+        <div class="details">
+          <ul>
+            <li>Provided hands-on IT support and troubleshooting in dynamic environments</li>
+            <li>Managed endpoint devices and basic network configurations</li>
+            <li>Resolved technical issues for 200+ users daily</li>
+            <li>Assisted in system migrations and software deployments</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="journey-card">
+      <img src="company2.png" alt="Company 2 Logo">
+      <div class="content">
+        <h3>NGO / Organization Name</h3>
+        <p class="year-title">2022 - 2024 | Systems Administrator</p>
+        <div class="details">
+          <ul>
+            <li>Supported NGO and logistics infrastructure at scale</li>
+            <li>Implemented and maintained Microsoft 365 environments</li>
+            <li>Managed user permissions and collaboration tools</li>
+            <li>Ensured system uptime for critical humanitarian operations</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="journey-card">
+      <img src="company3.png" alt="Company 3 Logo">
+      <div class="content">
+        <h3>Current Company</h3>
+        <p class="year-title">2024 - Present | Senior IT Systems & Security Specialist</p>
+        <div class="details">
+          <ul>
+            <li>Led advanced infrastructure, networking, and cybersecurity projects</li>
+            <li>Deployed Kaspersky endpoint security across enterprise</li>
+            <li>Designed and implemented secure LAN/WLAN networks</li>
+            <li>Conducted security audits and incident response</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
@@ -532,7 +619,7 @@ footer a{
   <h2>Contact</h2>
   <p>Email: <a href="mailto:wanjerumarc@icloud.com">wanjerumarc@icloud.com</a></p>
   <p>Phone: <a href="tel:+256769593704">+256 769 593 704</a></p>
-  <p>Location: Johannesburg, South Africa</p>
+  <p>Location: KAMPALA, UGANDA</p>
 </section>
 
 <!-- FOOTER -->
