--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Marc Wanjeru — IT Systems & Cybersecurity Specialist | Kampala, Uganda</title>
-  <meta name="description" content="Marc Wanjeru — Experienced IT Systems Administrator and Cybersecurity Specialist based in Kampala, Uganda. Expert in Microsoft 365, Kaspersky, Sophos, network infrastructure and endpoint security."/>
+  <title>Marc Wanjeru — IT Systems & Cybersecurity Specialist | Kampala</title>
+  <meta name="description" content="Marc Wanjeru — Experienced IT Systems Administrator and Cybersecurity Specialist in Kampala, Uganda. Microsoft 365, Kaspersky, Sophos, network security & infrastructure expert."/>
 
-  <!-- Simple favicon placeholder – replace with real one later -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛡️</text></svg>">
+
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet"/>
+  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
 
   <style>
     :root {
-      --bg:        #0b141a;
-      --surface:    #111b22;
-      --glass:      rgba(20, 35, 50, 0.68);
-      --border:     rgba(255,255,255,0.08);
-      --text:       #e2e8f0;
-      --text-light: #94a3b8;
-      --accent:     #00d4c0;
+      --bg:          #0a1117;
+      --surface:     #111b22;
+      --glass:       rgba(20, 35, 50, 0.72);
+      --glass-border:rgba(255,255,255,0.09);
+      --blur:        blur(16px);
+      --text:        #e2e8f0;
+      --text-muted:  #94a3b8;
+      --accent:      #00d4c0;
       --accent-dark: #00a894;
-      --radius:     16px;
-      --shadow:     0 12px 40px rgba(0,0,0,0.55);
+      --card-bg:     rgba(25, 40, 55, 0.68);
+      --shadow:      0 12px 40px rgba(0,0,0,0.6);
+      --radius:      16px;
     }
 
     * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+      margin:0; padding:0; box-sizing:border-box;
     }
 
     body {
-      font-family: system-ui, -apple-system, sans-serif;
+      font-family: system-ui, sans-serif;
       background: var(--bg);
       color: var(--text);
       min-height: 100vh;
@@ -39,31 +41,31 @@
     }
 
     /* ── Navbar ── */
-    header nav {
+    .nav-container {
       position: fixed;
-      top: 16px;
-      left: 50%;
+      top: 16px; left: 50%;
       transform: translateX(-50%);
       z-index: 1000;
-      width: 94%;
-      max-width: 1280px;
-      height: 68px;
-      background: var(--glass);
-      backdrop-filter: blur(14px);
-      -webkit-backdrop-filter: blur(14px);
-      border: 1px solid var(--border);
-      border-radius: 999px;
-      box-shadow: var(--shadow);
-      padding: 0 24px;
-      display: flex;
-      align-items: center;
+      width: 94%; max-width: 1240px;
       transition: all 0.4s ease;
     }
 
-    header nav.scrolled {
+    .nav-container.scrolled {
       top: 8px;
-      width: 90%;
-      max-width: 1220px;
+      width: 90%; max-width: 1180px;
+    }
+
+    nav {
+      height: 68px;
+      background: var(--glass);
+      backdrop-filter: var(--blur);
+      border: 1px solid var(--glass-border);
+      border-radius: 999px;
+      box-shadow: var(--shadow);
+      display: flex;
+      align-items: center;
+      padding: 0 24px;
+      gap: 16px;
     }
 
     .nav-links {
@@ -80,7 +82,6 @@
       border-radius: 999px;
       font-size: 15px;
       font-weight: 500;
-      white-space: nowrap;
       transition: all 0.3s;
     }
 
@@ -105,16 +106,15 @@
     }
 
     /* ── Hero ── */
-    #hero {
+    #home {
       height: 100vh;
       min-height: 720px;
-      background: linear-gradient(rgba(11,20,26,0.82), rgba(11,20,26,0.88)),
+      background: linear-gradient(rgba(10,20,26,0.82), rgba(10,20,26,0.88)),
                   url('https://images.unsplash.com/photo-1558494949-ef0d7b9d4d29?w=2400&auto=format&fit=crop&q=90') center/cover no-repeat fixed;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
-      padding: 0 5%;
     }
 
     .hero-box {
@@ -127,28 +127,10 @@
       box-shadow: 0 24px 64px rgba(0,0,0,0.6);
     }
 
-    .hero-box h1:first-child {
-      font-size: 3.8rem;
-      margin-bottom: 0.4rem;
-      font-weight: 800;
-    }
-
-    .hero-box h1:last-child {
-      font-size: 5.4rem;
-      line-height: 0.95;
-      margin: 0.3rem 0 1.5rem;
-      font-weight: 900;
-    }
-
-    .hero-box h1 span {
-      color: var(--accent);
-    }
-
-    .hero-box p {
-      font-size: 1.55rem;
-      opacity: 0.92;
-      margin-bottom: 2.8rem;
-    }
+    .hero-box h1:first-child { font-size: 3.8rem; margin-bottom: 0.4rem; font-weight: 800; }
+    .hero-box h1:last-child  { font-size: 5.4rem; line-height: 0.95; margin: 0.3rem 0 1.5rem; font-weight: 900; }
+    .hero-box h1 span { color: var(--accent); }
+    .hero-box p { font-size: 1.55rem; opacity: 0.92; margin-bottom: 2.8rem; }
 
     .hero-buttons {
       display: flex;
@@ -164,45 +146,16 @@
       border-radius: 999px;
       text-decoration: none;
       transition: all 0.3s ease;
-      display: inline-block;
     }
 
-    .btn-primary {
-      background: var(--accent);
-      color: #000;
-    }
+    .btn-primary { background: var(--accent); color: #000; }
+    .btn-primary:hover { background: var(--accent-dark); transform: translateY(-3px); box-shadow: 0 12px 32px rgba(0,201,177,0.35); }
+    .btn-outline { background: transparent; border: 2px solid white; color: white; }
+    .btn-outline:hover { background: rgba(255,255,255,0.12); transform: translateY(-3px); }
 
-    .btn-primary:hover {
-      background: var(--accent-dark);
-      transform: translateY(-3px);
-      box-shadow: 0 12px 32px rgba(0,201,177,0.35);
-    }
-
-    .btn-outline {
-      background: transparent;
-      border: 2px solid white;
-      color: white;
-    }
-
-    .btn-outline:hover {
-      background: rgba(255,255,255,0.12);
-      transform: translateY(-3px);
-    }
-
-    /* ── Content sections ── */
-    section {
-      padding: 140px 5% 100px;
-      max-width: 1400px;
-      margin: 0 auto;
-    }
-
-    h2 {
-      font-size: 3.2rem;
-      text-align: center;
-      color: var(--accent);
-      margin-bottom: 3.5rem;
-      font-weight: 700;
-    }
+    /* ── Sections ── */
+    section { padding: 140px 5% 100px; max-width: 1400px; margin: 0 auto; }
+    h2 { font-size: 3.2rem; text-align: center; color: var(--accent); margin-bottom: 3.5rem; font-weight: 700; }
 
     .card-grid {
       display: flex;
@@ -220,47 +173,210 @@
       flex: 0 0 360px;
       scroll-snap-align: start;
       background: var(--glass);
-      backdrop-filter: blur(14px);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
+      backdrop-filter: var(--blur);
+      border: 1px solid var(--glass-border);
+      border-radius: 20px;
       padding: 32px;
       box-shadow: var(--shadow);
-      transition: transform 0.4s ease;
+      transition: transform 0.4s;
     }
 
-    .card:hover {
-      transform: translateY(-12px);
+    .card:hover { transform: translateY(-12px); }
+
+    /* ── Contact Section – Neumorphic / Glassmorphic design ── */
+    #contact {
+      position: relative;
+      overflow: hidden;
     }
 
-    /* About two-column */
-    #about .content {
+    #contact::before {
+      content: "CONTACT";
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 18rem;
+      font-weight: 900;
+      color: rgba(0,212,192,0.04);
+      pointer-events: none;
+      user-select: none;
+      z-index: -1;
+      white-space: nowrap;
+    }
+
+    .contact-wrapper {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 80px;
-      align-items: center;
-    }
-
-    #about img {
-      width: 100%;
-      border-radius: 20px;
-      box-shadow: var(--shadow);
-    }
-
-    /* Contact */
-    #contact .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 80px;
-      max-width: 1100px;
+      max-width: 1200px;
       margin: 0 auto;
     }
 
-    /* Footer */
+    .contact-left {
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+    }
+
+    .contact-toggle {
+      width: 48px;
+      height: 48px;
+      background: var(--accent);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.4rem;
+      color: #000;
+      box-shadow: inset 0 2px 8px rgba(0,0,0,0.4), 0 4px 16px rgba(0,212,192,0.35);
+      align-self: flex-start;
+    }
+
+    .contact-left h2 {
+      font-size: 3.6rem;
+      text-align: left;
+      margin-bottom: 1rem;
+    }
+
+    .contact-left p {
+      font-size: 1.25rem;
+      opacity: 0.9;
+      max-width: 480px;
+    }
+
+    .contact-cards {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .contact-card {
+      background: var(--card-bg);
+      backdrop-filter: var(--blur);
+      border: 1px solid var(--glass-border);
+      border-radius: var(--radius);
+      padding: 24px;
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      box-shadow: inset 0 2px 8px rgba(0,0,0,0.3), 0 8px 24px rgba(0,0,0,0.4);
+      transition: all 0.3s ease;
+    }
+
+    .contact-card:hover {
+      transform: translateY(-4px);
+      box-shadow: inset 0 2px 12px rgba(0,0,0,0.35), 0 16px 40px rgba(0,0,0,0.5);
+    }
+
+    .contact-icon {
+      width: 56px;
+      height: 56px;
+      background: rgba(0,212,192,0.15);
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.8rem;
+      color: var(--accent);
+    }
+
+    .contact-info {
+      flex: 1;
+    }
+
+    .contact-info strong {
+      display: block;
+      font-size: 1.15rem;
+      margin-bottom: 0.3rem;
+    }
+
+    .contact-info a {
+      color: var(--text);
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .contact-info a:hover {
+      color: var(--accent);
+    }
+
+    .arrow {
+      font-size: 1.4rem;
+      color: var(--text-muted);
+      transition: all 0.3s;
+    }
+
+    .contact-card:hover .arrow {
+      color: var(--accent);
+      transform: translateX(6px);
+    }
+
+    /* Right side – Form */
+    .contact-form {
+      background: var(--card-bg);
+      backdrop-filter: var(--blur);
+      border: 1px solid var(--glass-border);
+      border-radius: var(--radius);
+      padding: 40px;
+      box-shadow: inset 0 2px 12px rgba(0,0,0,0.35), 0 16px 48px rgba(0,0,0,0.5);
+    }
+
+    .contact-form label {
+      display: block;
+      margin-bottom: 0.6rem;
+      font-size: 0.95rem;
+      color: var(--text-light);
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      width: 100%;
+      padding: 14px 18px;
+      margin-bottom: 1.5rem;
+      background: rgba(255,255,255,0.04);
+      border: 1px solid rgba(255,255,255,0.12);
+      border-radius: 12px;
+      color: var(--text);
+      font-size: 1.05rem;
+      transition: all 0.3s;
+    }
+
+    .contact-form input:focus,
+    .contact-form textarea:focus {
+      outline: none;
+      border-color: var(--accent);
+      box-shadow: 0 0 0 3px rgba(0,212,192,0.15);
+    }
+
+    .contact-form textarea {
+      min-height: 160px;
+      resize: vertical;
+    }
+
+    .contact-form button {
+      width: 100%;
+      padding: 18px;
+      background: var(--accent);
+      color: #000;
+      font-size: 1.15rem;
+      font-weight: 600;
+      border: none;
+      border-radius: 999px;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+
+    .contact-form button:hover {
+      background: var(--accent-dark);
+      transform: translateY(-2px);
+      box-shadow: 0 12px 32px rgba(0,201,177,0.35);
+    }
+
+    /* ── Footer ── */
     footer {
       background: var(--footer-bg);
       padding: 80px 5% 40px;
-      border-top: 1px solid var(--border);
       color: var(--text-light);
+      border-top: 1px solid var(--border);
     }
 
     .footer-grid {
@@ -286,31 +402,12 @@
     .footer-column a {
       color: var(--text-light);
       text-decoration: none;
-      line-height: 2;
+      display: block;
+      margin-bottom: 0.6rem;
       transition: color 0.3s;
     }
 
-    .footer-column a:hover {
-      color: var(--accent);
-    }
-
-    .social {
-      display: flex;
-      gap: 1.4rem;
-      margin-top: 1.5rem;
-      justify-content: center;
-    }
-
-    .social a {
-      font-size: 1.6rem;
-      color: var(--text-light);
-      transition: all 0.3s;
-    }
-
-    .social a:hover {
-      color: var(--accent);
-      transform: translateY(-3px);
-    }
+    .footer-column a:hover { color: var(--accent); }
 
     .copyright {
       text-align: center;
@@ -339,16 +436,11 @@
       transition: transform 0.3s;
     }
 
-    .whatsapp:hover {
-      transform: scale(1.15);
-    }
+    .whatsapp:hover { transform: scale(1.15); }
 
     @media (max-width: 960px) {
-      .hero-box h1:first-child  { font-size: 3.2rem; }
-      .hero-box h1:last-child   { font-size: 4.4rem; }
-      .hero-box .tagline        { font-size: 1.35rem; }
-      #about .content           { grid-template-columns: 1fr; text-align: center; }
-      #contact .grid            { grid-template-columns: 1fr; }
+      .contact-wrapper { grid-template-columns: 1fr; }
+      .hero-box h1:last-child { font-size: 4.4rem; }
     }
 
     @media (max-width: 640px) {
@@ -358,9 +450,9 @@
 </head>
 <body>
 
-<!-- ── Navigation ── -->
-<header>
-  <nav id="nav">
+<!-- Navigation -->
+<div class="nav-container" id="nav">
+  <nav>
     <div class="nav-links">
       <a href="#home">Home</a>
       <a href="#about">About</a>
@@ -373,9 +465,9 @@
     </div>
     <a href="#contact" class="nav-cta">Get in Touch →</a>
   </nav>
-</header>
+</div>
 
-<!-- ── Hero ── -->
+<!-- Hero -->
 <section id="home">
   <div class="hero-box">
     <h1>Hi There!</h1>
@@ -388,7 +480,7 @@
   </div>
 </section>
 
-<!-- ── About ── -->
+<!-- About -->
 <section id="about">
   <h2>About Me</h2>
   <div class="content">
@@ -396,11 +488,11 @@
       <p>IT Systems & Cybersecurity Specialist with hands-on experience in enterprise IT support, network infrastructure, Microsoft 365 administration, endpoint protection (Kaspersky, Sophos), vulnerability assessments and secure LAN/WLAN design.</p>
       <p>Based in Kampala, Uganda — passionate about helping businesses and organizations build reliable, secure and future-ready technology environments.</p>
     </div>
-    <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru"/>
+    <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru professional portrait"/>
   </div>
 </section>
 
-<!-- ── Journey ── -->
+<!-- Journey -->
 <section id="journey">
   <h2>Professional Journey</h2>
   <div class="card-grid">
@@ -427,7 +519,7 @@
   </div>
 </section>
 
-<!-- ── Services ── -->
+<!-- Services -->
 <section id="services">
   <h2>Services I Offer</h2>
   <div class="card-grid">
@@ -447,31 +539,63 @@
       <h3>Cybersecurity Services</h3>
       <p>Vulnerability scanning, Kaspersky/Sophos deployment, security audits, incident response planning.</p>
     </div>
-    <div class="card">
-      <h3>Hardware & Software Support</h3>
-      <p>Device troubleshooting, OS reinstalls, software licensing & deployment.</p>
-    </div>
   </div>
 </section>
 
-<!-- ── Contact ── -->
+<!-- Contact – your requested design -->
 <section id="contact">
-  <h2>Let's Connect</h2>
-  <div class="grid">
-    <div>
-      <h3>Get in Touch</h3>
-      <p><strong>Phone:</strong> <a href="tel:+256769593704">+256 769 593 704</a></p>
-      <p><strong>Email:</strong> <a href="mailto:wanjerumarc@icloud.com">wanjerumarc@icloud.com</a></p>
-      <p><strong>Location:</strong> Kampala, Central Region, Uganda</p>
-      <p style="margin-top:2rem;">Book a free 30-minute discovery call or message me directly.</p>
+  <div class="contact-wrapper">
+    <div class="contact-left">
+      <div class="contact-toggle">○</div>
+      <h2>Get in touch</h2>
+      <p>Have questions or ready to secure your IT infrastructure? Let's talk about how I can help your business in Kampala or beyond.</p>
+
+      <div class="contact-cards">
+        <div class="contact-card">
+          <div class="contact-icon">✉️</div>
+          <div class="contact-info">
+            <strong>Email us</strong>
+            <a href="mailto:wanjerumarc@icloud.com">wanjerumarc@icloud.com</a>
+          </div>
+          <span class="arrow">→</span>
+        </div>
+
+        <div class="contact-card">
+          <div class="contact-icon">📞</div>
+          <div class="contact-info">
+            <strong>Call us</strong>
+            <a href="tel:+256769593704">+256 769 593 704</a>
+          </div>
+          <span class="arrow">→</span>
+        </div>
+
+        <div class="contact-card">
+          <div class="contact-icon">📍</div>
+          <div class="contact-info">
+            <strong>Our location</strong>
+            Kampala, Central Region, Uganda
+          </div>
+          <span class="arrow">→</span>
+        </div>
+      </div>
     </div>
-    <div style="min-height:640px;">
-      <div class="calendly-inline-widget" data-url="https://calendly.com/placeholder/30min" style="min-width:320px;height:100%;"></div>
+
+    <div class="contact-form">
+      <label for="name">Name</label>
+      <input type="text" id="name" placeholder="Your name" required/>
+
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="your@email.com" required/>
+
+      <label for="message">Message</label>
+      <textarea id="message" placeholder="How can I help you today?" rows="6" required></textarea>
+
+      <button type="submit">Submit</button>
     </div>
   </div>
 </section>
 
-<!-- ── Footer ── -->
+<!-- Footer -->
 <footer>
   <div class="footer-grid">
     <div class="footer-brand">
@@ -481,9 +605,9 @@
 
     <div>
       <h4>Quick Links</h4>
-      <a href="#home">Home</a><br>
-      <a href="#about">About</a><br>
-      <a href="#services">Services</a><br>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
       <a href="#contact">Contact</a>
     </div>
 
@@ -503,24 +627,19 @@
     </div>
   </div>
 
-  <div class="social">
-    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
-    <a href="https://github.com/" target="_blank">GitHub</a>
-  </div>
-
   <div class="copyright">
-    © 2026 Marc Wanjeru. All rights reserved.
+    © 2026 Marc Wanjeru. Built in Kampala.
   </div>
 </footer>
 
 <!-- WhatsApp -->
-<a href="https://wa.me/256769593704?text=Hi%20Marc%2C%20I%20would%20like%20to%20discuss%20..." class="whatsapp" target="_blank">💬</a>
+<a href="https://wa.me/256769593704?text=Hi%20Marc%2C%20I%20would%20like%20to%20discuss..." class="whatsapp" target="_blank">💬</a>
 
 <script>
-// Navbar shrink on scroll
-window.addEventListener('scroll', () => {
-  document.querySelector('header nav').classList.toggle('scrolled', window.scrollY > 80);
-});
+  // Navbar scroll effect
+  window.addEventListener('scroll', () => {
+    document.querySelector('.nav-container').classList.toggle('scrolled', window.scrollY > 80);
+  });
 </script>
 
 </body>
